--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -149,3 +149,54 @@ label.required::after {
     vertical-align: middle;
     @apply max-sm:w-4
 }
+
+/* Stepper ------------------------------------------------------------------- */
+.step-item .step-marker,
+.step-item .step-title {
+    z-index: 2;
+}
+
+.step-item::before {
+    content: " ";
+    display: block;
+    width: 5%;
+    height: 100%;
+    background-color: white;
+    position: absolute;
+    z-index: 1;
+}
+
+.step-item:last-child::before {
+    width: 8%;
+}
+
+html[dir="rtl"] .step-item:first-child::before {
+    left: unset;
+    right: 0;
+}
+
+html[dir="rtl"] .step-item:last-child::before {
+    left: 0;
+    right: unset;   
+}
+
+html[dir="ltr"] .step-item:first-child::before {
+    left: 0;
+    right: unset; 
+}
+
+html[dir="ltr"] .step-item:last-child::before {
+    left: unset;
+    right: 0;  
+}
+
+.step-item::after {
+    content: " ";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: var(--border);
+    position: absolute;
+    top: 25%;
+    z-index: -1;
+}
