create groups page

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -19,6 +19,7 @@
     --warning: #FF8800;
     --success: #0F9918;
     --secondary-foreground: #6B6B6B;
+    --medium: 'IBM Plex Sans Arabic Medium';
 }
 
 @theme {
@@ -28,7 +29,7 @@
     --color-forground: var(--forground);
     --color-black: var(--black);
     --color-border: var(--border);
-    --font-medium: 'IBM Plex Sans Arabic Medium'
+    --font-medium: var(--medium);
     --color-error: var(--error);
     --color-warning: var(--warning);
     --color-success: var(--success);
